// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSnapshot should render Button without onClick 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  type="button"
>
  children
</button>
`;

exports[`ButtonSnapshot should render normal Button 1`] = `
<button
  className="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-sm focus:outline-none focus:shadow-outline"
  onClick={[Function]}
  type="button"
>
  children
</button>
`;
